<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewDetails"
    android:background="@color/theme"
    android:padding="@dimen/dimen10"
    android:orientation="vertical"
   >
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginBottom="@dimen/dimen10"
         android:layout_marginTop="@dimen/dimen10">
        <ImageView
            android:id="@+id/backPressed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_arrow"
            />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textStyle="bold"
             android:text="@string/cocktail_details"
             android:textColor="@color/white"
             android:textSize="@dimen/text18"
             android:layout_marginStart="@dimen/dimen10"
            />

     </LinearLayout>
    <TextView
        android:id="@+id/drinkName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="@dimen/text18"
        android:layout_marginTop="@dimen/dimen10"/>
       <ImageView
           android:id="@+id/drinkThumb"
           android:layout_width="match_parent"
           android:layout_height="@dimen/dimen200"
           android:layout_marginTop="@dimen/dimen10"
           />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/instructions"
        android:textColor="@color/white"
        android:textSize="@dimen/text18"
        android:layout_marginTop="@dimen/dimen10"/>
    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize13"
        android:layout_marginTop="@dimen/dimen10"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/glass"
        android:textColor="@color/white"
        android:textSize="@dimen/text18"
        android:layout_marginTop="@dimen/dimen10"/>
    <TextView
        android:id="@+id/glassName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize13"
        android:layout_marginTop="@dimen/dimen10"/>


</LinearLayout>