<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/theme"
    android:orientation="vertical">
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/dimen80"
        android:layout_height="@dimen/dimen80"
        android:indeterminate="true"
        android:layout_centerInParent="true"
        android:progressDrawable="@drawable/circular_progress_bar"
        android:indeterminateDrawable="@drawable/circular_progress_bar"
        />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/extendFloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/white"
        android:text="@string/scan_any_qr"
        android:textColor="@color/black"
        app:icon="@drawable/qr_code"
        android:visibility="gone"
        app:iconTint="@color/black" />

    <TextView
        android:id="@+id/noData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/no_data_available"
        android:layout_centerInParent="true"
        android:textColor="@color/white"
        android:textSize="@dimen/text18"
        android:visibility="gone"
        android:layout_marginTop="@dimen/dimen10"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
   <AutoCompleteTextView
       android:id="@+id/searchData"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="@color/white"
       android:padding="@dimen/dimen10"
       android:textSize="@dimen/textSize12"
       android:maxLines="1"
       android:layout_marginTop="@dimen/dimen10"
       android:layout_marginStart="@dimen/dimen10"
       android:layout_marginEnd="@dimen/dimen10"
       android:drawableEnd="@drawable/ic_search_24"
       android:hint="@string/search_cocktail"
       />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/white"
        android:layout_marginTop="@dimen/dimen20"
        android:layout_marginBottom="@dimen/dimen20"
        android:layout_marginStart="@dimen/dimen10"
        android:layout_marginEnd="@dimen/dimen10"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>
    </LinearLayout>

</RelativeLayout>